[project]
name = "bayesian-time-series-analysis-in-python-bs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "arviz>=1.1.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pmdarima>=2.1.1",
    "pymc>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
